--- a/TNRS/DESCRIPTION
+++ b/TNRS/DESCRIPTION
@@ -12,7 +12,8 @@ Encoding: UTF-8
 LazyData: true
 Imports: 
         jsonlite,
-        RCurl
+        RCurl,
+        rjson
 Suggests:
         knitr,
         rmarkdown,
