--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,12 @@
 Package: TNRS
 Title: Taxonomic Name Resolution Service
-Version: 0.0.0.9000
+Version: 0.1.0
 Authors@R: 
     c(
             person("Brian", "Maitner", email = "bmaitner@gmail.com", role = c("aut", "cre"), comment = c(ORCID = "0000-0002-2118-9880")),
             person("Brad", "Boyle", email = "bboyle@email.arizona.edu", role = c("aut"))
             )
-Description: The package provides access to the Taxonomic Name Resolution Service through R.  The user supplies plant taxonomic names and the package returns resolved taxonomic names along with information on decisions.  Optionally, the package can also be used to parse taxonomic names.  
+Description: Provides access to the Taxonomic Name Resolution Service through R.  The user supplies plant taxonomic names and the package returns resolved taxonomic names along with information on decisions.  Optionally, the package can also be used to parse taxonomic names.  
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
