--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,7 +18,6 @@ Suggests:
         knitr,
         rmarkdown,
         testthat,
-        devtools,
-        BIEN
+        devtools
 VignetteBuilder: knitr
 RoxygenNote: 7.1.1
