updated CRAN comments

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Authors@R:
             person("Brian", "Maitner", email = "bmaitner@gmail.com", role = c("aut", "cre"), comment = c(ORCID = "0000-0002-2118-9880")),
             person("Brad", "Boyle", email = "bboyle@email.arizona.edu", role = c("aut"))
             )
-Description: Provides access to the Taxonomic Name Resolution Service through R.  The user supplies plant taxonomic names and the package returns resolved taxonomic names along with information on decisions.  Optionally, the package can also be used to parse taxonomic names.  
+Description: Provides access to the Taxonomic Name Resolution Service <https://tnrsapi.xyz/tnrs_api.php> through R.  The user supplies plant taxonomic names and the package returns resolved taxonomic names along with information on decisions.  Optionally, the package can also be used to parse taxonomic names. More details on the API are found at <https://github.com/ojalaquellueva/tnrsapi>. 
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
