--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,6 +19,7 @@ Suggests:
         knitr,
         rmarkdown,
         testthat,
+        vcr,
         devtools
 VignetteBuilder: knitr
 RoxygenNote: 7.1.2
