--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,8 +13,7 @@ Encoding: UTF-8
 LazyData: true
 Imports: 
         jsonlite,
-        httr,
-        rjson
+        httr
 Suggests:
     knitr,
     rmarkdown,
