updates to tnrs_testfile to remove non-ascii characters (causing CRAN errors)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,3 +9,5 @@ import(httr)
 importFrom(httr,GET)
 importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,toJSON)
+importFrom(utils,setTxtProgressBar)
+importFrom(utils,txtProgressBar)
