--- a/tests/fixtures/gnrs_version.yml
+++ b/tests/fixtures/gnrs_version.yml
@@ -4,7 +4,7 @@ http_interactions:
     uri: https://tnrsapi.xyz/tnrs_api.php
     body:
       encoding: ''
-      string: '{"opts":{"sources":"tropicos,wcvp","class":"tropicos","mode":"meta","matches":"best"}}'
+      string: '{"opts":{"sources":"wcvp,wfo","class":"wfo","mode":"meta","matches":"best"}}'
     headers:
       Content-Type: application/json
       Accept: application/json
@@ -16,7 +16,7 @@ http_interactions:
       reason: OK
       message: 'Success: (200) OK'
     headers:
-      date: Thu, 29 Dec 2022 00:44:12 GMT
+      date: Mon, 12 Jun 2023 18:44:53 GMT
       server: Apache/2.4.29 (Ubuntu)
       access-control-allow-origin: '*'
       content-length: '88'
@@ -25,5 +25,5 @@ http_interactions:
       encoding: ''
       file: no
       string: '[{"db_version":"4.2","build_date":"2021-08-02","code_version":"5.0.3","api_version":""}]'
-  recorded_at: 2022-12-29 00:44:12 GMT
-  recorded_with: vcr/1.2.0, webmockr/0.8.2
+  recorded_at: 2023-06-12 18:44:53 GMT
+  recorded_with: vcr/1.2.0, webmockr/0.9.0
