--- a/tests/fixtures/tnrs_high.yml
+++ b/tests/fixtures/tnrs_high.yml
@@ -4,7 +4,7 @@ http_interactions:
     uri: https://tnrsapi.xyz/tnrs_api.php
     body:
       encoding: ''
-      string: '{"opts":{"sources":"tropicos,wcvp","class":"tropicos","mode":"resolve","matches":"all","acc":0.99},"data":[["1","Brad
+      string: '{"opts":{"sources":"wcvp,wfo","class":"wfo","mode":"resolve","matches":"all","acc":0.99},"data":[["1","Brad
         boyle"]]}'
     headers:
       Content-Type: application/json
@@ -17,7 +17,7 @@ http_interactions:
       reason: OK
       message: 'Success: (200) OK'
     headers:
-      date: Thu, 29 Dec 2022 00:44:00 GMT
+      date: Mon, 12 Jun 2023 18:44:29 GMT
       server: Apache/2.4.29 (Ubuntu)
       access-control-allow-origin: '*'
       content-length: '1066'
@@ -28,5 +28,5 @@ http_interactions:
       string: '[{"ID":"1","Name_submitted":"Brad boyle","Overall_score":"","Name_matched_id":"","Name_matched":"[No
         match found]","Name_score":"","Name_matched_rank":"","Author_submitted":"","Author_matched":"","Author_score":"","Canonical_author":"","Name_matched_accepted_family":"","Genus_submitted":"Brad","Genus_matched":"","Genus_score":"","Specific_epithet_submitted":"boyle","Specific_epithet_matched":"","Specific_epithet_score":"","Family_submitted":"","Family_matched":"","Family_score":"","Infraspecific_rank":"","Infraspecific_epithet_matched":"","Infraspecific_epithet_score":"","Infraspecific_rank_2":"","Infraspecific_epithet_2_matched":"","Infraspecific_epithet_2_score":"","Annotations":"","Unmatched_terms":"Brad
         boyle","Name_matched_url":"","Name_matched_lsid":"","Phonetic":"","Taxonomic_status":"","Accepted_name":"","Accepted_species":"","Accepted_name_author":"","Accepted_name_id":"","Accepted_name_rank":"","Accepted_name_url":"","Accepted_name_lsid":"","Accepted_family":"","Overall_score_order":"","Highertaxa_score_order":"","Source":"","Warnings":""}]'
-  recorded_at: 2022-12-29 00:44:00 GMT
-  recorded_with: vcr/1.2.0, webmockr/0.8.2
+  recorded_at: 2023-06-12 18:44:31 GMT
+  recorded_with: vcr/1.2.0, webmockr/0.9.0
