--- a/tests/fixtures/tnrs_parsed.yml
+++ b/tests/fixtures/tnrs_parsed.yml
@@ -4,7 +4,7 @@ http_interactions:
     uri: https://tnrsapi.xyz/tnrs_api.php
     body:
       encoding: ''
-      string: '{"opts":{"sources":"tropicos,wcvp","class":"tropicos","mode":"parse","matches":"best"},"data":[["1","Epidentrum
+      string: '{"opts":{"sources":"wcvp,wfo","class":"wfo","mode":"parse","matches":"best"},"data":[["1","Epidentrum
         boyleii"]]}'
     headers:
       Content-Type: application/json
@@ -17,7 +17,7 @@ http_interactions:
       reason: OK
       message: 'Success: (200) OK'
     headers:
-      date: Thu, 29 Dec 2022 00:43:57 GMT
+      date: Mon, 12 Jun 2023 18:44:23 GMT
       server: Apache/2.4.29 (Ubuntu)
       access-control-allow-origin: '*'
       content-length: '268'
@@ -26,5 +26,5 @@ http_interactions:
       encoding: ''
       file: no
       string: '[{"ID":"1","Name_submitted":"Epidentrum boyleii","Family":"","Genus":"Epidentrum","Specific_epithet":"boyleii","Infraspecific_rank":"","Infraspecific_epithet":"","Infraspecific_rank_2":"","Infraspecific_epithet_2":"","Author":"","Annotations":"","Unmatched_terms":""}]'
-  recorded_at: 2022-12-29 00:43:57 GMT
-  recorded_with: vcr/1.2.0, webmockr/0.8.2
+  recorded_at: 2023-06-12 18:44:25 GMT
+  recorded_with: vcr/1.2.0, webmockr/0.9.0
