--- a/tests/fixtures/tnrs_parsed_2.yml
+++ b/tests/fixtures/tnrs_parsed_2.yml
@@ -4,7 +4,7 @@ http_interactions:
     uri: https://tnrsapi.xyz/tnrs_api.php
     body:
       encoding: ''
-      string: '{"opts":{"sources":"tropicos,wcvp","class":"tropicos","mode":"parse","matches":"best"},"data":[["1","Epidenrum
+      string: '{"opts":{"sources":"wcvp,wfo","class":"wfo","mode":"parse","matches":"best"},"data":[["1","Epidenrum
         boyleii"],["2","Acer rubrum"],["3","Xanthium strumarium"],["4","Abies alba"]]}'
     headers:
       Content-Type: application/json
@@ -17,7 +17,7 @@ http_interactions:
       reason: OK
       message: 'Success: (200) OK'
     headers:
-      date: Thu, 29 Dec 2022 00:44:00 GMT
+      date: Mon, 12 Jun 2023 18:44:27 GMT
       server: Apache/2.4.29 (Ubuntu)
       access-control-allow-origin: '*'
       content-length: '1039'
@@ -29,5 +29,5 @@ http_interactions:
         rubrum","Family":"","Genus":"Acer","Specific_epithet":"rubrum","Infraspecific_rank":"","Infraspecific_epithet":"","Infraspecific_rank_2":"","Infraspecific_epithet_2":"","Author":"","Annotations":"","Unmatched_terms":""},{"ID":"3","Name_submitted":"Xanthium
         strumarium","Family":"","Genus":"Xanthium","Specific_epithet":"strumarium","Infraspecific_rank":"","Infraspecific_epithet":"","Infraspecific_rank_2":"","Infraspecific_epithet_2":"","Author":"","Annotations":"","Unmatched_terms":""},{"ID":"4","Name_submitted":"Abies
         alba","Family":"","Genus":"Abies","Specific_epithet":"alba","Infraspecific_rank":"","Infraspecific_epithet":"","Infraspecific_rank_2":"","Infraspecific_epithet_2":"","Author":"","Annotations":"","Unmatched_terms":""}]'
-  recorded_at: 2022-12-29 00:43:59 GMT
-  recorded_with: vcr/1.2.0, webmockr/0.8.2
+  recorded_at: 2023-06-12 18:44:29 GMT
+  recorded_with: vcr/1.2.0, webmockr/0.9.0
