--- a/tests/fixtures/tnrs_usda.yml
+++ b/tests/fixtures/tnrs_usda.yml
@@ -4,7 +4,7 @@ http_interactions:
     uri: https://tnrsapi.xyz/tnrs_api.php
     body:
       encoding: ''
-      string: '{"opts":{"sources":"usda","class":"tropicos","mode":"resolve","matches":"best"},"data":[["1","Epidenrum
+      string: '{"opts":{"sources":"usda","class":"wfo","mode":"resolve","matches":"best"},"data":[["1","Epidenrum
         boyleii"],["2","Acer rubrum"],["3","Xanthium strumarium"],["4","Abies alba"]]}'
     headers:
       Content-Type: application/json
@@ -17,7 +17,7 @@ http_interactions:
       reason: OK
       message: 'Success: (200) OK'
     headers:
-      date: Thu, 29 Dec 2022 00:43:50 GMT
+      date: Mon, 12 Jun 2023 18:44:12 GMT
       server: Apache/2.4.29 (Ubuntu)
       access-control-allow-origin: '*'
       content-length: '5215'
@@ -35,5 +35,5 @@ http_interactions:
         alba","Overall_score":"1","Name_matched_id":"360608","Name_matched":"Abies
         alba","Name_score":"1","Name_matched_rank":"species","Author_submitted":"","Author_matched":"","Author_score":"","Canonical_author":"Mill.","Name_matched_accepted_family":"Pinaceae","Genus_submitted":"Abies","Genus_matched":"Abies","Genus_score":"1","Specific_epithet_submitted":"alba","Specific_epithet_matched":"alba","Specific_epithet_score":"1","Family_submitted":"","Family_matched":"","Family_score":"","Infraspecific_rank":"","Infraspecific_epithet_matched":"","Infraspecific_epithet_score":"","Infraspecific_rank_2":"","Infraspecific_epithet_2_matched":"","Infraspecific_epithet_2_score":"","Annotations":"","Unmatched_terms":"","Name_matched_url":"https:\/\/plants.sc.egov.usda.gov\/home\/plantProfile?symbol=ABAL3","Name_matched_lsid":"","Phonetic":"Y","Taxonomic_status":"Accepted","Accepted_name":"Abies
         alba","Accepted_species":"Abies alba","Accepted_name_author":"Mill.","Accepted_name_id":"360608","Accepted_name_rank":"species","Accepted_name_url":"https:\/\/plants.sc.egov.usda.gov\/home\/plantProfile?symbol=ABAL3","Accepted_name_lsid":"","Accepted_family":"Pinaceae","Overall_score_order":"1","Highertaxa_score_order":"1","Source":"usda","Warnings":"0"}]'
-  recorded_at: 2022-12-29 00:43:50 GMT
-  recorded_with: vcr/1.2.0, webmockr/0.8.2
+  recorded_at: 2023-06-12 18:44:16 GMT
+  recorded_with: vcr/1.2.0, webmockr/0.9.0
