--- a/tests/fixtures/tnrs_parsed_2.yml
+++ b/tests/fixtures/tnrs_parsed_2.yml
@@ -17,17 +17,17 @@ http_interactions:
       reason: OK
       message: 'Success: (200) OK'
     headers:
-      date: Thu, 08 Feb 2024 19:39:25 GMT
-      server: Apache/2.4.29 (Ubuntu)
+      date: Tue, 05 Mar 2024 14:37:29 GMT
+      server: Apache/2.4.41 (Ubuntu)
       access-control-allow-origin: '*'
-      content-length: '1039'
+      content-length: '1115'
       content-type: application/json
     body:
       encoding: ''
       file: no
-      string: '[{"ID":"1","Name_submitted":"Epidenrum boyleii","Family":"","Genus":"Epidenrum","Specific_epithet":"boyleii","Infraspecific_rank":"","Infraspecific_epithet":"","Infraspecific_rank_2":"","Infraspecific_epithet_2":"","Author":"","Annotations":"","Unmatched_terms":""},{"ID":"2","Name_submitted":"Acer
-        rubrum","Family":"","Genus":"Acer","Specific_epithet":"rubrum","Infraspecific_rank":"","Infraspecific_epithet":"","Infraspecific_rank_2":"","Infraspecific_epithet_2":"","Author":"","Annotations":"","Unmatched_terms":""},{"ID":"3","Name_submitted":"Xanthium
-        strumarium","Family":"","Genus":"Xanthium","Specific_epithet":"strumarium","Infraspecific_rank":"","Infraspecific_epithet":"","Infraspecific_rank_2":"","Infraspecific_epithet_2":"","Author":"","Annotations":"","Unmatched_terms":""},{"ID":"4","Name_submitted":"Abies
-        alba","Family":"","Genus":"Abies","Specific_epithet":"alba","Infraspecific_rank":"","Infraspecific_epithet":"","Infraspecific_rank_2":"","Infraspecific_epithet_2":"","Author":"","Annotations":"","Unmatched_terms":""}]'
-  recorded_at: 2024-02-08 19:39:25 GMT
+      string: '[{"ID":"1","Name_submitted":"Epidenrum boyleii","Family":"","Genus":"Epidenrum","Specific_epithet":"boyleii","Infraspecific_rank":"","Infraspecific_epithet":"","Infraspecific_rank_2":"","Infraspecific_epithet_2":"","Author":"","Annotations":"","Unmatched_terms":"","WarningsEng":null},{"ID":"2","Name_submitted":"Acer
+        rubrum","Family":"","Genus":"Acer","Specific_epithet":"rubrum","Infraspecific_rank":"","Infraspecific_epithet":"","Infraspecific_rank_2":"","Infraspecific_epithet_2":"","Author":"","Annotations":"","Unmatched_terms":"","WarningsEng":null},{"ID":"3","Name_submitted":"Xanthium
+        strumarium","Family":"","Genus":"Xanthium","Specific_epithet":"strumarium","Infraspecific_rank":"","Infraspecific_epithet":"","Infraspecific_rank_2":"","Infraspecific_epithet_2":"","Author":"","Annotations":"","Unmatched_terms":"","WarningsEng":null},{"ID":"4","Name_submitted":"Abies
+        alba","Family":"","Genus":"Abies","Specific_epithet":"alba","Infraspecific_rank":"","Infraspecific_epithet":"","Infraspecific_rank_2":"","Infraspecific_epithet_2":"","Author":"","Annotations":"","Unmatched_terms":"","WarningsEng":null}]'
+  recorded_at: 2024-03-05 14:37:29 GMT
   recorded_with: vcr/1.2.2, webmockr/0.9.0
