--- a/tests/fixtures/tnrs_high.yml
+++ b/tests/fixtures/tnrs_high.yml
@@ -17,16 +17,22 @@ http_interactions:
       reason: OK
       message: 'Success: (200) OK'
     headers:
-      date: Thu, 08 Feb 2024 19:39:26 GMT
-      server: Apache/2.4.29 (Ubuntu)
+      date: Tue, 05 Mar 2024 14:37:29 GMT
+      server: Apache/2.4.41 (Ubuntu)
       access-control-allow-origin: '*'
-      content-length: '1066'
+      content-length: '3297'
       content-type: application/json
     body:
       encoding: ''
       file: no
       string: '[{"ID":"1","Name_submitted":"Brad boyle","Overall_score":"","Name_matched_id":"","Name_matched":"[No
         match found]","Name_score":"","Name_matched_rank":"","Author_submitted":"","Author_matched":"","Author_score":"","Canonical_author":"","Name_matched_accepted_family":"","Genus_submitted":"Brad","Genus_matched":"","Genus_score":"","Specific_epithet_submitted":"boyle","Specific_epithet_matched":"","Specific_epithet_score":"","Family_submitted":"","Family_matched":"","Family_score":"","Infraspecific_rank":"","Infraspecific_epithet_matched":"","Infraspecific_epithet_score":"","Infraspecific_rank_2":"","Infraspecific_epithet_2_matched":"","Infraspecific_epithet_2_score":"","Annotations":"","Unmatched_terms":"Brad
-        boyle","Name_matched_url":"","Name_matched_lsid":"","Phonetic":"","Taxonomic_status":"","Accepted_name":"","Accepted_species":"","Accepted_name_author":"","Accepted_name_id":"","Accepted_name_rank":"","Accepted_name_url":"","Accepted_name_lsid":"","Accepted_family":"","Overall_score_order":"","Highertaxa_score_order":"","Source":"","Warnings":""}]'
-  recorded_at: 2024-02-08 19:39:26 GMT
+        boyle","Name_matched_url":"","Name_matched_lsid":"","Phonetic":"","Taxonomic_status":"","Accepted_name":"","Accepted_species":"","Accepted_name_author":"","Accepted_name_id":"","Accepted_name_rank":"","Accepted_name_url":"","Accepted_name_lsid":"","Accepted_family":"","Overall_score_order":"","Highertaxa_score_order":"","Source":"","Warnings":"","WarningsEng":"[Partial]"},{"ID":"1","Name_submitted":"Brad
+        boyle","Overall_score":"","Name_matched_id":"","Name_matched":"[No match found]","Name_score":"","Name_matched_rank":"","Author_submitted":"","Author_matched":"","Author_score":"","Canonical_author":"","Name_matched_accepted_family":"","Genus_submitted":"Brad","Genus_matched":"","Genus_score":"","Specific_epithet_submitted":"boyle","Specific_epithet_matched":"","Specific_epithet_score":"","Family_submitted":"","Family_matched":"","Family_score":"","Infraspecific_rank":"","Infraspecific_epithet_matched":"","Infraspecific_epithet_score":"","Infraspecific_rank_2":"","Infraspecific_epithet_2_matched":"","Infraspecific_epithet_2_score":"","Annotations":"","Unmatched_terms":"Brad
+        boyle","Name_matched_url":"","Name_matched_lsid":"","Phonetic":"","Taxonomic_status":"","Accepted_name":"","Accepted_species":"","Accepted_name_author":"","Accepted_name_id":"","Accepted_name_rank":"","Accepted_name_url":"","Accepted_name_lsid":"","Accepted_family":"","Overall_score_order":"","Highertaxa_score_order":"","Source":"","Warnings":"","WarningsEng":"[Partial]
+        [Overall]"},{"ID":"1","Name_submitted":"Brad boyle","Overall_score":"","Name_matched_id":"","Name_matched":"[No
+        match found]","Name_score":"","Name_matched_rank":"","Author_submitted":"","Author_matched":"","Author_score":"","Canonical_author":"","Name_matched_accepted_family":"","Genus_submitted":"Brad","Genus_matched":"","Genus_score":"","Specific_epithet_submitted":"boyle","Specific_epithet_matched":"","Specific_epithet_score":"","Family_submitted":"","Family_matched":"","Family_score":"","Infraspecific_rank":"","Infraspecific_epithet_matched":"","Infraspecific_epithet_score":"","Infraspecific_rank_2":"","Infraspecific_epithet_2_matched":"","Infraspecific_epithet_2_score":"","Annotations":"","Unmatched_terms":"Brad
+        boyle","Name_matched_url":"","Name_matched_lsid":"","Phonetic":"","Taxonomic_status":"","Accepted_name":"","Accepted_species":"","Accepted_name_author":"","Accepted_name_id":"","Accepted_name_rank":"","Accepted_name_url":"","Accepted_name_lsid":"","Accepted_family":"","Overall_score_order":"","Highertaxa_score_order":"","Source":"","Warnings":"","WarningsEng":"[Partial]
+        [HigherTaxa]"}]'
+  recorded_at: 2024-03-05 14:37:29 GMT
   recorded_with: vcr/1.2.2, webmockr/0.9.0
