--- a/tests/fixtures/tnrs_parsed.yml
+++ b/tests/fixtures/tnrs_parsed.yml
@@ -17,14 +17,14 @@ http_interactions:
       reason: OK
       message: 'Success: (200) OK'
     headers:
-      date: Thu, 08 Feb 2024 19:39:22 GMT
-      server: Apache/2.4.29 (Ubuntu)
+      date: Tue, 05 Mar 2024 14:37:27 GMT
+      server: Apache/2.4.41 (Ubuntu)
       access-control-allow-origin: '*'
-      content-length: '268'
+      content-length: '287'
       content-type: application/json
     body:
       encoding: ''
       file: no
-      string: '[{"ID":"1","Name_submitted":"Epidentrum boyleii","Family":"","Genus":"Epidentrum","Specific_epithet":"boyleii","Infraspecific_rank":"","Infraspecific_epithet":"","Infraspecific_rank_2":"","Infraspecific_epithet_2":"","Author":"","Annotations":"","Unmatched_terms":""}]'
-  recorded_at: 2024-02-08 19:39:23 GMT
+      string: '[{"ID":"1","Name_submitted":"Epidentrum boyleii","Family":"","Genus":"Epidentrum","Specific_epithet":"boyleii","Infraspecific_rank":"","Infraspecific_epithet":"","Infraspecific_rank_2":"","Infraspecific_epithet_2":"","Author":"","Annotations":"","Unmatched_terms":"","WarningsEng":null}]'
+  recorded_at: 2024-03-05 14:37:27 GMT
   recorded_with: vcr/1.2.2, webmockr/0.9.0
