added TNRS_synonyms function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(TNRS)
 export(TNRS_citations)
 export(TNRS_metadata)
 export(TNRS_sources)
+export(TNRS_synonyms)
 export(TNRS_version)
 import(httr)
 importFrom(httr,GET)
